scripts/gpu_reources/llm-httproute.yaml
cat <<EOF | kubectl apply -f -
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm-route
  namespace: litellm
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - litellm.llm-k8s.awssolutionsprovider.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: litellm
          port: 4000
EOF
